--- a/ch.jester.reportengine.jasper.impl.nl1/nl1/messages/messages_de.properties
+++ b/ch.jester.reportengine.jasper.impl.nl1/nl1/messages/messages_de.properties
@@ -1,4 +1,4 @@
-JasperReportEngine_category_pairing_name=Kategorie Paarung
+JasperReportEngine_category_pairing_name=Paarungen
 JasperReportEngine_ranking_report_name=Rangliste
 JasperReportEngine_compile_job_title=Kompiliere Reports
 JasperReportEngine_compile_task=Kompiliere 
