--- a/ch.jester.ui.tournament.nl1/nl1/messages/messages_de.properties
+++ b/ch.jester.ui.tournament.nl1/nl1/messages/messages_de.properties
@@ -68,6 +68,8 @@ RoundDetailsPage_lbl_date=Datum
 RoundEditor_Graph=Resultat Graph
 RoundEditor_Saving=Speichere 
 RoundEditor_Table=Resultat Tabelle
+RankingViewEditor_generate_background_pdf=erzeuge PDF
+RankingViewEditor_generate_rankinglist=Generiere Rangliste
 TournamentEditor_progress_saving=Speichern
 TournamentEditor_title=Turnier
 TournamentFormPage_lbl_dateFrom=Datum von
