--- a/ch.jester.ui.tournament/nl1/messages/messages.properties
+++ b/ch.jester.ui.tournament/nl1/messages/messages.properties
@@ -70,6 +70,8 @@ RoundDetailsPage_lbl_date=Date
 RoundEditor_Graph=Result Graph
 RoundEditor_Saving=Saving 
 RoundEditor_Table=Result Table
+RankingViewEditor_generate_background_pdf=creating PDF
+RankingViewEditor_generate_rankinglist=Generate RankingList
 TournamentEditor_progress_saving=Saving
 TournamentEditor_title=Tournament
 TournamentFormPage_lbl_dateFrom=Date From
