--- a/ch.jester.ui.tournament.nl1/nl1/messages/messages_fr.properties
+++ b/ch.jester.ui.tournament.nl1/nl1/messages/messages_fr.properties
@@ -68,6 +68,8 @@ RoundDetailsPage_lbl_date=Date
 RoundEditor_Graph=Graph des résultats
 RoundEditor_Saving=Sauver 
 RoundEditor_Table=Tableau des résultats
+RankingViewEditor_generate_background_pdf=creating PDF
+RankingViewEditor_generate_rankinglist=Generate RankingList
 TournamentEditor_progress_saving=Sauver
 TournamentEditor_title=Tournois
 TournamentFormPage_lbl_dateFrom=Date de
