--- a/trunk/ch.jester.ui.tournament.nl1/nl1/messages/messages_de.properties
+++ b/trunk/ch.jester.ui.tournament.nl1/nl1/messages/messages_de.properties
@@ -56,7 +56,7 @@ RankingHandler_msg_UnknownError_text=Es ist ein unbekannter Fehler aufgetreten.\
 RankingHandler_msg_UnknownError_title=Unbekannter Fehler
 RemovePlayerHandler_player_remove_failed_cause=Die Kategorie ist bereits gepaart.
 RemovePlayerHandler_player_remove_failed_title=Spieler kann nicht entfernt werden.
-ResultForm_1=Paarungs Resultate: 
+ResultForm_1=Paarungsresultate: 
 ResultForm_3=Expand All
 ResultForm_5=Collapse All
 ResultForm_6=Runde: 
