--- a/trunk/ch.jester.ui.tournament.nl1/nl1/messages/messages_fr.properties
+++ b/trunk/ch.jester.ui.tournament.nl1/nl1/messages/messages_fr.properties
@@ -56,7 +56,7 @@ RankingHandler_msg_UnknownError_text=Il y a eu un erreur inconue.\nLa cr\u00E9at
 RankingHandler_msg_UnknownError_title=Erreur inconue
 RemovePlayerHandler_player_remove_failed_cause=The Category is paired.
 RemovePlayerHandler_player_remove_failed_title=Can't remove Player
-ResultForm_1=Paarungs Resultate: 
+ResultForm_1=Paarungsresultate: 
 ResultForm_3=Expand All
 ResultForm_5=Collapse All
 ResultForm_6=Runde: 
