--- a/trunk/ch.jester.reportengine.jasper.impl.nl1/nl1/messages/messages_de.properties
+++ b/trunk/ch.jester.reportengine.jasper.impl.nl1/nl1/messages/messages_de.properties
@@ -1,3 +1,5 @@
+Activator_exporting_jester_model=Exportiere jester Modell
+Activator_exporting_model=Exportiere Modell
 JasperReportEngine_category_pairing_name=Paarungen
 JasperReportEngine_ranking_report_name=Rangliste
 JasperReportEngine_compile_job_title=Kompiliere Reports
@@ -16,6 +18,7 @@ JasperReportEngine_second_unit=\ Sekunden
 JasperReportEngine_tournament_report_name=Turnier Paarung
 JasperReportEngine_waiting=Warte
 JasperReportEngine_waiting_for=Warte auf '
+JasperReportEngineStartup_startup=Initializiere ReportEngine
 JasperReportsPreferencePage_could_not_open=Kann nicht öffnen: 
 JasperReportsPreferencePage_desc=Templates (doppelklicken um in der assoziierten Anwendung zu öffnen)
 JasperReportsPreferencePage_file=Datei
