--- a/trunk/ch.jester.reportengine.jasper.impl.nl1/nl1/messages/messages_fr.properties
+++ b/trunk/ch.jester.reportengine.jasper.impl.nl1/nl1/messages/messages_fr.properties
@@ -1,3 +1,5 @@
+Activator_exporting_jester_model=Exporting jester model
+Activator_exporting_model=Exporting model
 JasperReportEngine_category_pairing_name=Pairings
 JasperReportEngine_ranking_report_name=Ranking List;
 JasperReportEngine_compile_job_title=Compiling Reports
@@ -17,6 +19,7 @@ JasperReportEngine_tournament_report_name=Tournament Pairing
 JasperReportEngine_waiting=Waiting
 JasperReportEngine_waiting_for=Waiting for '
 JasperReportsPreferencePage_could_not_open=Could not open: 
+JasperReportEngineStartup_startup=Initialize ReportEngine
 JasperReportsPreferencePage_desc=Templates (double click to open in associated app)
 JasperReportsPreferencePage_file=File
 JasperReportsPreferencePage_import_report=Import Report
