--- a/trunk/ch.jester.reportengine.jasper.impl/nl1/messages/messages.properties
+++ b/trunk/ch.jester.reportengine.jasper.impl/nl1/messages/messages.properties
@@ -1,5 +1,5 @@
-JasperReportEngine_category_pairing_name=Pairings
-JasperReportEngine_ranking_report_name=Ranking List;
+Activator_exporting_jester_model=Exporting jester model
+Activator_exporting_model=Exporting model
 JasperReportEngine_compile_job_title=Compiling Reports
 JasperReportEngine_compile_task=Compiling 
 JasperReportEngine_ex_class_not_handle=Class can not be handled\!
@@ -9,13 +9,13 @@ JasperReportEngine_ex_no_input_class=No Input Class for
 JasperReportEngine_ex_session_not_null=Session can't be null
 JasperReportEngine_gen_input_size=Generating Report. Inputsize: 
 JasperReportEngine_objects=\ Objects ...
-JasperReportEngine_player_report_name=Player List
 JasperReportEngine_precompile_task=Precompiling Reports
 JasperReportEngine_report_created=Report created after 
 JasperReportEngine_second_unit=\ seconds
 JasperReportEngine_tournament_report_name=Tournament Pairing
 JasperReportEngine_waiting=Waiting
 JasperReportEngine_waiting_for=Waiting for '
+JasperReportEngineStartup_startup=Initialize ReportEngine
 JasperReportsPreferencePage_could_not_open=Could not open: 
 JasperReportsPreferencePage_desc=Templates (double click to open in associated app)
 JasperReportsPreferencePage_file=File
