--- a/trunk/ch.jester.reportengine.jasper.impl.nl1/nl1/messages/messages_fr.properties
+++ b/trunk/ch.jester.reportengine.jasper.impl.nl1/nl1/messages/messages_fr.properties
@@ -1,3 +1,6 @@
+JasperReportEngine_category_pairing_name=Pairings
+JasperReportEngine_ranking_report_name=Ranking List;
+JasperReportEngine_player_report_name=Player List
 Activator_exporting_jester_model=Exporting jester model
 Activator_exporting_model=Exporting model
 JasperReportEngine_category_pairing_name=Pairings
