--- a/ch.jester.reportengine.jasper.impl.nl1/nl1/messages/messages_de.properties
+++ b/ch.jester.reportengine.jasper.impl.nl1/nl1/messages/messages_de.properties
@@ -1,3 +1,6 @@
+JasperReportEngine_category_pairing_name=Paarungen
+JasperReportEngine_ranking_report_name=Rangliste
+JasperReportEngine_player_report_name=Spielerliste
 Activator_exporting_jester_model=Exportiere jester Modell
 Activator_exporting_model=Exportiere Modell
 JasperReportEngine_category_pairing_name=Paarungen
