Schweizer System Plugin umbenannt

--- a/ch.jester.system.swiss.dutch/OSGI-INF/l10n/bundle_de.properties
+++ b/ch.jester.system.swiss.dutch/OSGI-INF/l10n/bundle_de.properties
@@ -1,2 +1,2 @@
 #Properties file for ch.jester.system.swiss.dutch
-PairingAlgorithm.typeDescription = Schweizer System basierend auf Wertungszahl (Holl\u00E4ndisches System)
+PairingAlgorithm.typeDescription = Einfaches Schweizer System basierend auf Wertungszahl
