--- a/ch.jester.system.swiss.dutch/OSGI-INF/l10n/bundle.properties
+++ b/ch.jester.system.swiss.dutch/OSGI-INF/l10n/bundle.properties
@@ -1,2 +1,2 @@
 #Properties file for ch.jester.system.swiss.dutch
-PairingAlgorithm.typeDescription = Swiss System Based on Rating (The Dutch System)
+PairingAlgorithm.typeDescription = Simple Swiss System Based on Rating
