--- a/trunk/ch.jester.system.swiss.dutch/OSGI-INF/l10n/bundle_fr.properties
+++ b/trunk/ch.jester.system.swiss.dutch/OSGI-INF/l10n/bundle_fr.properties
@@ -1,2 +1,2 @@
 #Properties file for ch.jester.system.swiss.dutch
-PairingAlgorithm.typeDescription = Syst\u00E8me Suisse bas\u00E9e aux Elo (Syst\u00E8me Hollandais)
+PairingAlgorithm.typeDescription = Simple Syst\u00E8me Suisse bas\u00E9e aux Elo
