--- a/ch.jester.common.ui/nl1/messages/messages.properties
+++ b/ch.jester.common.ui/nl1/messages/messages.properties
@@ -1,3 +1,7 @@
 DaoDeleteHandler_deleting=Deleting
 DaoDeleteHandler_still_referenced=Can't delete Objects, since it's still in use
 DefaultSelectionCountListener_items_selected=\ Item(s) selected
+UIFieldConstraints_0=
+UIFieldConstraints_double=Value must be a number; eg 1.0
+UIFieldConstraints_float=Value must be a number; eg 1.0
+UIFieldConstraints_integer=Value must be a number; eg 1
