--- a/trunk/ch.jester.ui.tournament.nl1/nl1/messages/messages_de.properties
+++ b/trunk/ch.jester.ui.tournament.nl1/nl1/messages/messages_de.properties
@@ -46,10 +46,16 @@ NewTournWizPageSystem_lbl_pairingSystem=Paarungs-System
 NewTournWizPageSystem_lbl_rankingSystem=Feinwertungs-System
 NewTournWizPageSystem_message=Turniersystem definieren
 NewTournWizPageSystem_title=System
+PairingHandler_msg_NoRounds_text=Die Kategorie hat keine Runden angehängt.\nBitte die benötigte Anzahl Runden hinzufügen und erneut versuchen.
+PairingHandler_msg_NoRounds_title=Keine Runden
+PairingHandler_msg_NoPlayers_text=Die Kategorie hat keine Spieler hinzugefügt.\nBitte einige Spieler zur Kategorie hinzufügen.
+PairingHandler_msg_NoPlayers_title=Keine Spieler
 PairingHandler_msg_NotAllResults_text=Es wurden noch nicht alle Resultate der letzten Runde erfasst\!
 PairingHandler_msg_NotAllResults_title=Fehlende Resultate
 PairingHandler_msg_PairingNotPossible_text=Paarung nicht m\u00F6glich\!\nBitte Anzahl Runden und Spieler in der Kategorie pr\u00FCfen.
 PairingHandler_msg_PairingNotPossible_title=Paarung nicht möglich
+PairingHandler_msg_TournamentFinished_text=Das Turnier ist bereits beendet.\nKein weiteres Paaren möglich.
+PairingHandler_msg_TournamentFinished_title=Turnier beendet
 PairingHandler_msg_UnknownError_text=Es ist ein unbekannter Fehler aufgetreten.\nDas erzeugen der Paarungen ist nicht m\u00F6glich\!
 PairingHandler_msg_UnknownError_title=Unbekannter Fehler
 RankingHandler_msg_UnknownError_text=Es ist ein unbekannter Fehler aufgetreten.\nDie Rangliste kann nicht erstellt werden\!
