--- a/trunk/ch.jester.ui.tournament.nl1/nl1/messages/messages_fr.properties
+++ b/trunk/ch.jester.ui.tournament.nl1/nl1/messages/messages_fr.properties
@@ -46,10 +46,16 @@ NewTournWizPageSystem_lbl_pairingSystem=Système du tirage
 NewTournWizPageSystem_lbl_rankingSystem=Système du classement
 NewTournWizPageSystem_message=Définition du système du tournoi
 NewTournWizPageSystem_title=Système
+PairingHandler_msg_NoRounds_text=Il n'y a pas de tour ajouter à la categorie.\nSvp ajouter le nombre de tours necessaire.
+PairingHandler_msg_NoRounds_title=Pas de tours
+PairingHandler_msg_NoPlayers_text=Il n'y a pas de joueurs ajouter à la categorie.\nSvp ajoutes quelques joueurs.
+PairingHandler_msg_NoPlayers_title=Pas de joueurs
 PairingHandler_msg_NotAllResults_text=Il n'y a pas encore tous les resultats de la derni\u00E8re tour\!
 PairingHandler_msg_NotAllResults_title=Resultats manquant
 PairingHandler_msg_PairingNotPossible_text=Tirage pas possible\!\nSvp. contr\u00F4ler la num\u00E9ro des joueur et des tour dans la categorie.
 PairingHandler_msg_PairingNotPossible_title=Tirage pas possible
+PairingHandler_msg_TournamentFinished_text=Le tournoi est déjà terminée.
+PairingHandler_msg_TournamentFinished_title=Tournoi terminée
 PairingHandler_msg_UnknownError_text=Il y a eu un erreur inconue.\nLe tirage n'est pas possible\!
 PairingHandler_msg_UnknownError_title=Erreur inconue
 RankingHandler_msg_UnknownError_text=Il y a eu un erreur inconue.\nLa cr\u00E9ation du classement n'est pas possible\!
