--- a/trunk/ch.jester.ui.tournament/nl1/messages/messages.properties
+++ b/trunk/ch.jester.ui.tournament/nl1/messages/messages.properties
@@ -48,10 +48,16 @@ NewTournamentWizPageName_lbl_name=Name
 NewTournamentWizPageName_message=Creating a new tournament
 NewTournamentWizPageName_title=Tournament
 NewTournamentWizard_NewTournament=New Tournament
+PairingHandler_msg_NoRounds_text=The category has no rounds added.\nPlease add the required number of rounds and retry to pair.
+PairingHandler_msg_NoRounds_title=No Rounds
+PairingHandler_msg_NoPlayers_text=The category has no players to pair.\nPlease add some players to the category.
+PairingHandler_msg_NoPlayers_title=No Players
 PairingHandler_msg_NotAllResults_text=There are not all results available from the last round\!
 PairingHandler_msg_NotAllResults_title=Not all Results
 PairingHandler_msg_PairingNotPossible_text=Pairing is not possible\!\nCheck the number of players and rounds of the category.
 PairingHandler_msg_PairingNotPossible_title=Pairing not possible
+PairingHandler_msg_TournamentFinished_text=The tournament has already been finished.\nNo more pairings possible.
+PairingHandler_msg_TournamentFinished_title=Tournament finished
 PairingHandler_msg_UnknownError_text=An unknown error happened.\nCannot create pairing\!
 PairingHandler_msg_UnknownError_title=Unknown Error
 RankingHandler_msg_UnknownError_text=An unknown error happened.\nCannot create ranking\!
