--- a/ch.jester.system.swiss.simple/src/ch/jester/system/swiss/simple/ui/nl1/messages_fr.properties
+++ b/ch.jester.system.swiss.simple/src/ch/jester/system/swiss/simple/ui/nl1/messages_fr.properties
@@ -7,5 +7,5 @@ SwissSimpleSettingsPage_lbl_FirstRoundColor=Couleur pr. joueur 1 au 1er tour
 SwissSimpleSettingsPage_lbl_ratingType=Type d'\u00E9valuation
 SwissSimpleSettingsPage_nationalElo=Elo nationale
 SwissSimpleSettingsPage_random=Par hazard
-SwissSimpleSettingsPage_title=Param\u00E8tres du Syst\u00E8me Suisse (Hollandais)
+SwissSimpleSettingsPage_title=Param\u00E8tres du Syst\u00E8me Suisse Simple
 SwissSimpleSettingsPage_white=blanc
