--- a/trunk/ch.jester.system.swiss.simple/src/ch/jester/system/swiss/simple/ui/nl1/messages.properties
+++ b/trunk/ch.jester.system.swiss.simple/src/ch/jester/system/swiss/simple/ui/nl1/messages.properties
@@ -9,5 +9,5 @@ SwissSimpleSettingsPage_lbl_FirstRoundColor=Color for player 1 in 1st round
 SwissSimpleSettingsPage_lbl_ratingType=Rating-Type
 SwissSimpleSettingsPage_nationalElo=National Elo
 SwissSimpleSettingsPage_random=random
-SwissSimpleSettingsPage_title=Swiss (Dutch) System Settings
+SwissSimpleSettingsPage_title=Simple Swiss System Settings
 SwissSimpleSettingsPage_white=white
