--- a/trunk/ch.jester.system.swiss.simple/src/ch/jester/system/swiss/simple/ui/nl1/messages_de.properties
+++ b/trunk/ch.jester.system.swiss.simple/src/ch/jester/system/swiss/simple/ui/nl1/messages_de.properties
@@ -7,5 +7,5 @@ SwissSimpleSettingsPage_lbl_FirstRoundColor=Farbe für Spieler 1 in der 1. Runde
 SwissSimpleSettingsPage_lbl_ratingType=Wertungstyp
 SwissSimpleSettingsPage_nationalElo=Nationale Wertungszahl
 SwissSimpleSettingsPage_random=zufällig
-SwissSimpleSettingsPage_title=Einstellungen \: Schweizer (Holl\u00E4ndisches) System
+SwissSimpleSettingsPage_title=Einstellungen \: Einfaches Schweizer System
 SwissSimpleSettingsPage_white=weiss
