--- a/ch.jester.common.nl1/nl1/messages/messages_fr.properties
+++ b/ch.jester.common.nl1/nl1/messages/messages_fr.properties
@@ -1,8 +1,8 @@
-AbstractTableImporter_0=\ \ -  
-AbstractTableImporter_cant_set_value1=Can't set value '
-AbstractTableImporter_cant_set_value2=' to property '
-AbstractTableImporter_headerlength_detaillength_dontmatch=Header length and Details length don't match
-AbstractTableImporter_pls_check_settings='\!\n\nPlease check your settings.
-AbstractTableImporter_processing_input=Processing Input 
-AbstractTableImporter_reading_row=Reading Row 
-AbstractTableImporter_save_db=Save to Database 
+AbstractTableImporter_0=\  -  
+AbstractTableImporter_cant_set_value1=Erreur en enrégistrant le valeur '
+AbstractTableImporter_cant_set_value2=' a l'attribut '
+AbstractTableImporter_headerlength_detaillength_dontmatch=Longeur du header et des détails ne correspondent pas! 
+AbstractTableImporter_pls_check_settings='\!\n\nContrôlez les paramètres svp.
+AbstractTableImporter_processing_input=Traitement des entrées
+AbstractTableImporter_reading_row=Lire ligne
+AbstractTableImporter_save_db=Enregistrement dans la base de données 
