--- a/ch.jester.reportengine.jasper.impl.nl1/OSGI-INF/l10n/bundle_fr.properties
+++ b/ch.jester.reportengine.jasper.impl.nl1/OSGI-INF/l10n/bundle_fr.properties
@@ -1,8 +1,8 @@
 #Properties file for ch.jester.reportengine.jasper.impl
 Bundle-Vendor = M. Liechti & P. Simon
 Bundle-Name = Jasper Reportengine
-page.name = Reports
-lbl_pulldown = ch.jester.ui.reporting.pulldown
-cmd_generate_report = Generate Report
-lbl_menu_reports = Reports
-wizard_reports = Reports
+page.name = Raports
+lbl_pulldown = Raports
+cmd_generate_report = G\u00E9n\u00E9rer un raport
+lbl_menu_reports = Raports
+wizard_reports = Raports
