--- a/ch.jester.reportengine.jasper.impl.nl1/nl1/messages/messages_fr.properties
+++ b/ch.jester.reportengine.jasper.impl.nl1/nl1/messages/messages_fr.properties
@@ -1,47 +1,44 @@
-JasperReportEngine_category_pairing_name=Pairings
-JasperReportEngine_ranking_report_name=Ranking List;
-JasperReportEngine_player_report_name=Player List
-Activator_exporting_jester_model=Exporting jester model
-Activator_exporting_model=Exporting model
-JasperReportEngine_category_pairing_name=Pairings
-JasperReportEngine_ranking_report_name=Ranking List;
-JasperReportEngine_compile_job_title=Compiling Reports
-JasperReportEngine_compile_task=Compiling 
-JasperReportEngine_ex_class_not_handle=Class can not be handled\!
-JasperReportEngine_ex_definied=\ definied\!
-JasperReportEngine_ex_no_input=Input size 0
-JasperReportEngine_ex_no_input_class=No Input Class for 
-JasperReportEngine_ex_session_not_null=Session can't be null
-JasperReportEngine_gen_input_size=Generating Report. Inputsize: 
+JasperReportEngine_category_pairing_name=Pairs
+JasperReportEngine_ranking_report_name=Classement
+JasperReportEngine_player_report_name=Liste des joueurs
+Activator_exporting_jester_model=Exportation du mod\u00E8le jester
+Activator_exporting_model=Exportation du mod\u00E8le
+JasperReportEngine_compile_job_title=Compilation des raports
+JasperReportEngine_compile_task=Compilation
+JasperReportEngine_ex_class_not_handle=Classe ne peut pas \u00EAtre traiter\!
+JasperReportEngine_ex_definied=\ d\u00E9finit\!
+JasperReportEngine_ex_no_input=Grandeur de l'input 0
+JasperReportEngine_ex_no_input_class=Pas de classe d'input pour
+JasperReportEngine_ex_session_not_null=Session ne peut pas \u00EAtre null
+JasperReportEngine_gen_input_size=G\u00E9n\u00E9ration du raport. Grandeur\: 
 JasperReportEngine_objects=\ Objects ...
-JasperReportEngine_player_report_name=Player List
-JasperReportEngine_precompile_task=Precompiling Reports
-JasperReportEngine_report_created=Report created after 
+JasperReportEngine_precompile_task=Precompilation des raports
+JasperReportEngine_report_created=Raport cr\u00E9e apr\u00E8s 
 JasperReportEngine_second_unit=\ seconds
-JasperReportEngine_tournament_report_name=Tournament Pairing
-JasperReportEngine_waiting=Waiting
-JasperReportEngine_waiting_for=Waiting for '
-JasperReportsPreferencePage_could_not_open=Could not open: 
+JasperReportEngine_tournament_report_name=Pairs du tournoi
+JasperReportEngine_waiting=Attendre
+JasperReportEngine_waiting_for=Attendre pour '
+JasperReportsPreferencePage_could_not_open=Ne peut pas \u00EAtre ouvert\: 
 JasperReportEngineStartup_startup=Initialize ReportEngine
-JasperReportsPreferencePage_desc=Templates (double click to open in associated app)
-JasperReportsPreferencePage_file=File
-JasperReportsPreferencePage_import_report=Import Report
-JasperReportsPreferencePage_name=Name
-JasperReportsPreferencePage_show_in_fs=Show in Filesystem
-JasperReportsPreferencePage_source_name=Source Name
-JasperReportsPreferencePage_warning=Warning
+JasperReportsPreferencePage_desc=Mod\u00E8le (double click ouvrir dans l'application correspondant)
+JasperReportsPreferencePage_file=Fichier
+JasperReportsPreferencePage_import_report=Importation de raport
+JasperReportsPreferencePage_name=Nom
+JasperReportsPreferencePage_show_in_fs=Montrer dans le syst\u00E8me d'\u00E9xploitation
+JasperReportsPreferencePage_source_name=Nom de source
+JasperReportsPreferencePage_warning=Attention
 ReportExportPage_1=wizardPage
 ReportExportPage_browse=browse
-ReportExportPage_export_as=Export as
-ReportExportPage_export_data=Export data
-ReportExportPage_open=Open
-ReportExportPage_resport=Report
-ReportExportPage_title_export=Export
-ReportExportPage_tournament=Tournament
-ReportExportPage_tournamentsclass=Tournaments
+ReportExportPage_export_as=Exportation comme
+ReportExportPage_export_data=Exportation des donn\u00E9es
+ReportExportPage_open=Ouvrir
+ReportExportPage_resport=Raport
+ReportExportPage_title_export=Exportation
+ReportExportPage_tournament=Tournoi
+ReportExportPage_tournamentsclass=Tournois
 ReportImportDialog_browse=browse
 ReportImportDialog_input_bean=Input Bean
-ReportImportDialog_open=Open
-ReportImportDialog_report_file=Report File
-ReportImportDialog_report_name=Report Name
-ReportImportDialog_title=Report Importer
+ReportImportDialog_open=Ouvrir
+ReportImportDialog_report_file=Fichier du raport
+ReportImportDialog_report_name=Nom du raport
+ReportImportDialog_title=Importation d'un raport 
