--- a/trunk/ch.jester.ui.importer.nl1/nl1/messages/messages_fr.properties
+++ b/trunk/ch.jester.ui.importer.nl1/nl1/messages/messages_fr.properties
@@ -1,37 +1,37 @@
-AddColumnDialog_exception_linefeed=Selection enthält Zeilenumbrüche!
-AddColumnDialog_lbl_attributes=Attribute
-AddColumnDialog_lbl_btn_modify=Editiere Kolonnen
-AddColumnDialog_lbl_columns=Kolonnen
-AddColumnDialog_lbl_delete=Löschen
+AddColumnDialog_exception_linefeed=Selection contient des \u00E0 la ligne\!
+AddColumnDialog_lbl_attributes=Attributs
+AddColumnDialog_lbl_btn_modify=Editer colonne
+AddColumnDialog_lbl_columns=Colonnes
+AddColumnDialog_lbl_delete=Effacer
 AddColumnDialog_lbl_delimiter=Delimiter
-AddColumnDialog_lbl_input_selection=Input Selektion (Text markieren und rechtsklick um neue Kolonne zu erzeugen)
-AddColumnDialog_lbl_name=Name
-AddColumnDialog_lbl_newcolumn=neue Kolonne
-AddColumnDialog_lbl_properties=Eigenschaften
-AddColumnDialog_lbl_sequence=Sequenz
-AddColumnDialog_predefined_column_name=Kol-
-DownloadListener_progress_dl=Herunterladen von: 
-DownloadListener_error_cause=Either the Website is down, or you are behind a firewall
-DownloadListener_error_title=Could not download File
-ImportPlayerWizard_lbl_import_error=Import Fehler
-ImportPlayerWizard_lbl_titel=Import Spieler
+AddColumnDialog_lbl_input_selection=Input S\u00E9lection (marquer texte et cliquer \u00E0 droite pr. ajouter une colonne)
+AddColumnDialog_lbl_name=Nom
+AddColumnDialog_lbl_newcolumn=nouvelle colonne
+AddColumnDialog_lbl_properties=Propri\u00E9t\u00E9s
+AddColumnDialog_lbl_sequence=Sequence
+AddColumnDialog_predefined_column_name=Col-
+DownloadListener_progress_dl=T\u00E9l\u00E9chargement de\: 
+DownloadListener_error_cause=Soit la site web est inaccessible, soi votre par-feu bloque l'acc\u00E8s.
+DownloadListener_error_title=Fichier n'as pas pu \u00EAtre t\u00E9l\u00E9charg\u00E9e.
+ImportPlayerWizard_lbl_import_error=Erreur d'import
+ImportPlayerWizard_lbl_titel=Import des joueurs
 PlayerImportWizardPage_lbl_btn_browse=Browse
-PlayerImportWizardPage_lbl_btn_open=Öffnen
-PlayerImportWizardPage_lbl_content=Download Inhalt
-PlayerImportWizardPage_lbl_dl=Download
-PlayerImportWizardPage_lbl_handler=Import Handler
+PlayerImportWizardPage_lbl_btn_open=Ouvrir
+PlayerImportWizardPage_lbl_content=Contenu du t\u00E9l\u00E9chargement
+PlayerImportWizardPage_lbl_dl=T\u00E9l\u00E9charger
+PlayerImportWizardPage_lbl_handler=Processeur de l'import
 PlayerImportWizardPage_lbl_import=Import
-PlayerImportWizardPage_lbl_import_into_jester=Importiert Spieler in jester
-PlayerImportWizardPage_lbl_import_player=Spielerimport
+PlayerImportWizardPage_lbl_import_into_jester=Importation des joueurs dans jester
+PlayerImportWizardPage_lbl_import_player=Importation des joueurs
 PlayerImportWizardPage_lbl_provider=Provider
-PlayerImportWizardPage_lbl_select_zipfile=ZIP Datei auswählen
-PlayerImportWizardPage_lbl_source=Quelle
+PlayerImportWizardPage_lbl_select_zipfile=Choisir le fichier ZIP
+PlayerImportWizardPage_lbl_source=Source
 PlayerImportWizardPage_lbl_web=Web
 PlayerImportWizardPage_lbl_zip=Zip
-PropertyChooserWizardPage_lbl_input_col=Input Kolonnen
-PropertyChooserWizardPage_lbl_matching=Zuweisung Kolonnen zu Spieler Eigenschaften
-PropertyChooserWizardPage_lbl_modify=Kolonnen editieren
-PropertyChooserWizardPage_lbl_player_attribute=Spieler Eigenschaften
-PropertyChooserWizardPage_lbl_pm=Eigenschaften zuweisen
-PropertyChooserWizardPage_lbl_pp=Eigenschaftsseite
-PropertyChooserWizardPage_lbl_preview=Input Vorschau
+PropertyChooserWizardPage_lbl_input_col=Colonnes input
+PropertyChooserWizardPage_lbl_matching=Allocation des colonnen aux propri\u00E9t\u00E9s des joueurs
+PropertyChooserWizardPage_lbl_modify=Editer colonne
+PropertyChooserWizardPage_lbl_player_attribute=Propri\u00E9t\u00E9s des joueurs
+PropertyChooserWizardPage_lbl_pm=Allocation des propri\u00E9t\u00E9s
+PropertyChooserWizardPage_lbl_pp=Page des propri\u00E9t\u00E9s
+PropertyChooserWizardPage_lbl_preview=Aper\u00E7u de l'input
