--- a/trunk/ch.jester.ui.nl1/OSGI-INF/l10n/bundle_fr.properties
+++ b/trunk/ch.jester.ui.nl1/OSGI-INF/l10n/bundle_fr.properties
@@ -1,7 +1,7 @@
-PlayerView=Players
-TournamentView=Tournaments
-PlayerEditor=Player Editor
-Activate=Activate
-Deactivate=Deactivate
-NewPlayer=New Player
-TT_add_pulldown=New
+PlayerView=Joueurs
+TournamentView=Tournois
+PlayerEditor=Editeur des joueurs
+Activate=Activer
+Deactivate=D\u00E9sactiver
+NewPlayer=Nouveau joueur
+TT_add_pulldown=Nouveau
