--- a/trunk/ch.jester.ui.nl1/nl1/messages/messages_fr.properties
+++ b/trunk/ch.jester.ui.nl1/nl1/messages/messages_fr.properties
@@ -1,16 +1,16 @@
 PlayerFormPage_lbl_age=Age
-PlayerFormPage_lbl_chess_data=Chess data
-PlayerFormPage_lbl_city=City
+PlayerFormPage_lbl_chess_data=Donn\u00E9es des \u00E9checs
+PlayerFormPage_lbl_city=Ville
 PlayerFormPage_lbl_club=Club
 PlayerFormPage_lbl_elo=Elo
-PlayerFormPage_lbl_fidecode=Fide code
-PlayerFormPage_lbl_firstname=Firstname
-PlayerFormPage_lbl_lastname=Lastname
+PlayerFormPage_lbl_fidecode=Code FIDE
+PlayerFormPage_lbl_firstname=Pr\u00E9nom
+PlayerFormPage_lbl_lastname=Nom de famille
 PlayerFormPage_lbl_nation=Nation
-PlayerFormPage_lbl_nationalcode=National code
-PlayerFormPage_lbl_nationalelo=National Elo
-PlayerFormPage_lbl_personal_data=Personal data
-PlayerFormPage_lbl_player_det=Player Details
-PlayerFormPage_lbl_title=Title
-PlayersView_lbl_players_titel=Players
-PlayerFormPage_estimated_elo=Estimated Elo
+PlayerFormPage_lbl_nationalcode=Code nationale
+PlayerFormPage_lbl_nationalelo=Elo nationale
+PlayerFormPage_lbl_personal_data=Donn\u00E9es personnel
+PlayerFormPage_lbl_player_det=Details du joueur
+PlayerFormPage_lbl_title=Titre
+PlayersView_lbl_players_titel=Joueurs
+PlayerFormPage_estimated_elo=Elo \u00E9stim\u00E9e
