--- a/trunk/ch.jester.ui.tournament.nl1/OSGI-INF/l10n/bundle_fr.properties
+++ b/trunk/ch.jester.ui.tournament.nl1/OSGI-INF/l10n/bundle_fr.properties
@@ -9,7 +9,7 @@ TTaddPlayer=Ajouter des joueur à la categorie
 WirePlayerToCategoryDescr=Ajouter des joueur à la categorie
 RemovePlayer=Efface joueur
 RunPairing=Lancer le tirage
-TTrunPairing=TTrunPairing???
+TTrunPairing=Cr\u00E9er des pairs
 EditTournament=Paramètres du tournoi
 TTEditTournament=Modifier les param\u00E8tres du tournoi
 CreateRanking=Créer classement
