Edited wiki page ireportsandjester through web user interface.

--- a/wiki/ireportsandjester.wiki
+++ b/wiki/ireportsandjester.wiki
@@ -1,9 +1,7 @@
 #labels KnowHow
-#IReports and Jester
+IReports and Jester
 
 = Introduction =
 
 Install IReports from here: http://jasperforge.org/project/ireport to edit 
 jester report capabilities
-
-
