Edited wiki page ireportsandjester through web user interface.

--- a/wiki/ireportsandjester.wiki
+++ b/wiki/ireportsandjester.wiki
@@ -1,7 +1,6 @@
 #labels KnowHow
-IReports and Jester
+Jester Tipp - I - jester and reports
 
-= Introduction =
 
 Install IReports from here: http://jasperforge.org/project/ireport to edit 
 jester report capabilities
