Edited wiki page jestertipp3 through web user interface.

--- a/wiki/jestertipp3.wiki
+++ b/wiki/jestertipp3.wiki
@@ -1,3 +1,4 @@
 #summary jester tipp 3 - jester and Web Reports
+#labels KnowHow,HowTo
 
 Start the integrated Web Server (Preference Page 'Web Reports') to enable html output to a browser.
