--- a/trunk/ch.jester.reportengine.jasper.impl/nl1/messages/messages.properties
+++ b/trunk/ch.jester.reportengine.jasper.impl/nl1/messages/messages.properties
@@ -1,5 +1,5 @@
 JasperReportEngine_category_pairing_name=Pairings
-JasperReportEngine_ranking_report_name=Ranking List;
+JasperReportEngine_ranking_report_name=Ranking List
 JasperReportEngine_player_report_name=Player List
 Activator_exporting_jester_model=Exporting jester model
 Activator_exporting_model=Exporting model
